<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Epic Reel</string>
    <string name="settings">Settings</string>
    <string name="rate_review">Rate and Review</string>
    <string name="genres">Genres</string>
    <string name="theme">Theme</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="account_information">Account Information</string>
    <string name="privacy_security">Privacy &amp; Security</string>
    <string name="about_epicreel">About EpicReel</string>
    <string name="log_out">Log Out</string>
    <string name="back">Back</string>
    <string name="your_rating">Your Rating</string>
    <string name="your_review">Your Review</string>
    <string name="submit_review">Submit Review</string>
    <string name="share_your_thoughts">Share your thoughts...</string>
    <string name="sci_fi_movies">Sci-Fi Movies</string>
    <string name="back_to_genres">Back to Genres</string>
</resources>