<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/epicreel_dark_bg"
    android:id="@+id/rootGenresLayout">

    <!-- زر Back -->
    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_back"
        android:tint="@color/epicreel_text_primary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/spacing_large"
        android:layout_marginStart="@dimen/spacing_large"/>

    <!-- زر Close -->
    <ImageButton
        android:id="@+id/btnClose"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_close"
        android:tint="@color/epicreel_text_primary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/spacing_large"
        android:layout_marginEnd="@dimen/spacing_large"/>

    <TextView
        android:id="@+id/tvGenresTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/genres"
        android:textColor="@color/epicreel_text_primary"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnBack"
        app:layout_constraintEnd_toStartOf="@id/btnClose"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginTop="40dp"/>

    <TextView
        android:id="@+id/tvBackToGenres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_to_genres"
        android:textColor="@color/epicreel_text_secondary"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@id/tvGenresTitle"
        app:layout_constraintStart_toEndOf="@id/btnBack"
        app:layout_constraintEnd_toStartOf="@id/btnClose"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginTop="@dimen/spacing_small"/>

    <!-- عنوان Sci-Fi Movies -->
    <TextView
        android:id="@+id/tvSciFiMovies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sci_fi_movies"
        android:textColor="@color/epicreel_text_primary"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tvBackToGenres"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/spacing_xlarge"
        android:layout_marginStart="@dimen/spacing_large"/>

    <!-- RecyclerView لعرض الأفلام -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvMovies"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="@dimen/spacing_medium"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="2"
        app:layout_constraintTop_toBottomOf="@id/tvSciFiMovies"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>