<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background">

    <TextView
        android:id="@+id/tvSettingsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textColor="@color/epicreel_text_primary"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/spacing_large"
        android:layout_marginStart="@dimen/spacing_large"/>

    <!-- Appearance Section -->
    <TextView
        android:id="@+id/tvAppearance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="APPEARANCE"
        android:textColor="@color/epicreel_text_secondary"
        android:textSize="12sp"
        android:textAllCaps="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSettingsTitle"
        android:layout_marginTop="@dimen/spacing_xlarge"
        android:layout_marginStart="@dimen/spacing_large"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvDarkMode"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_marginStart="@dimen/spacing_large"
        android:layout_marginTop="@dimen/spacing_medium"
        android:layout_marginEnd="@dimen/spacing_large"
        app:cardCornerRadius="@dimen/card_corner_radius"
        app:cardElevation="0dp"
        app:cardBackgroundColor="@color/epicreel_card_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAppearance">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/theme"
                android:textColor="@color/epicreel_text_primary"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="@dimen/spacing_large"
                android:layout_marginTop="@dimen/spacing_medium"/>

            <TextView
                android:id="@+id/tvDarkMode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dark_mode"
                android:textColor="@color/epicreel_text_secondary"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTheme"
                android:layout_marginStart="@dimen/spacing_large"/>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/swDarkMode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:thumbTint="@drawable/switch_thumb_selector"
                app:trackTint="@drawable/switch_track_selector"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginEnd="@dimen/spacing_large"
                android:layout_marginTop="@dimen/spacing_medium"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <!-- Notifications Section -->
    <TextView
        android:id="@+id/tvNotifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="NOTIFICATIONS"
        android:textColor="@color/epicreel_text_secondary"
        android:textSize="12sp"
        android:textAllCaps="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cvDarkMode"
        android:layout_marginTop="@dimen/spacing_xlarge"
        android:layout_marginStart="@dimen/spacing_large"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvPushNotifications"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_marginStart="@dimen/spacing_large"
        android:layout_marginTop="@dimen/spacing_medium"
        android:layout_marginEnd="@dimen/spacing_large"
        app:cardCornerRadius="@dimen/card_corner_radius"
        app:cardElevation="0dp"
        app:cardBackgroundColor="@color/epicreel_card_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvNotifications">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tvPushNotifications"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/push_notifications"
                android:textColor="@color/epicreel_text_primary"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="@dimen/spacing_large"
                android:layout_marginTop="@dimen/spacing_medium"/>

            <TextView
                android:id="@+id/tvNotificationDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Get notified about new releases"
                android:textColor="@color/epicreel_text_secondary"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvPushNotifications"
                android:layout_marginStart="@dimen/spacing_large"/>

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/swPushNotifications"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:thumbTint="@drawable/switch_thumb_selector"
                app:trackTint="@drawable/switch_track_selector"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginEnd="@dimen/spacing_large"
                android:layout_marginTop="@dimen/spacing_medium"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <!-- Account Section -->
    <TextView
        android:id="@+id/tvAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ACCOUNT"
        android:textColor="@color/epicreel_text_secondary"
        android:textSize="12sp"
        android:textAllCaps="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cvPushNotifications"
        android:layout_marginTop="@dimen/spacing_xlarge"
        android:layout_marginStart="@dimen/spacing_large"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvAccountInfo"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="@dimen/spacing_large"
        android:layout_marginTop="@dimen/spacing_medium"
        android:layout_marginEnd="@dimen/spacing_large"
        app:cardCornerRadius="@dimen/card_corner_radius"
        app:cardElevation="0dp"
        app:cardBackgroundColor="@color/epicreel_card_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAccount">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/ivAccountIcon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_account"
                app:tint="@color/epicreel_text_secondary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="@dimen/spacing_large"
                android:layout_marginTop="@dimen/spacing_medium"/>

            <TextView
                android:id="@+id/tvAccountInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account_information"
                android:textColor="@color/epicreel_text_primary"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/ivAccountIcon"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="@dimen/spacing_medium"
                android:layout_marginTop="@dimen/spacing_medium"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvPrivacy"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="@dimen/spacing_large"
        android:layout_marginTop="@dimen/spacing_small"
        android:layout_marginEnd="@dimen/spacing_large"
        app:cardCornerRadius="@dimen/card_corner_radius"
        app:cardElevation="0dp"
        app:cardBackgroundColor="@color/epicreel_card_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cvAccountInfo">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/ivPrivacyIcon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_privacy"
                app:tint="@color/epicreel_text_secondary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="@dimen/spacing_large"
                android:layout_marginTop="@dimen/spacing_medium"/>

            <TextView
                android:id="@+id/tvPrivacy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/privacy_security"
                android:textColor="@color/epicreel_text_primary"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/ivPrivacyIcon"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="@dimen/spacing_medium"
                android:layout_marginTop="@dimen/spacing_medium"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <!-- About Section -->
    <TextView
        android:id="@+id/tvAbout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="ABOUT"
        android:textColor="@color/epicreel_text_secondary"
        android:textSize="12sp"
        android:textAllCaps="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cvPrivacy"
        android:layout_marginTop="10dp"
        android:layout_marginStart="@dimen/spacing_large"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvAbout"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="@dimen/spacing_large"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="@dimen/spacing_large"
        app:cardCornerRadius="@dimen/card_corner_radius"
        app:cardElevation="0dp"
        app:cardBackgroundColor="@color/epicreel_card_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAbout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/ivAboutIcon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_about"
                app:tint="@color/epicreel_text_secondary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="@dimen/spacing_large"
                android:layout_marginTop="15dp"/>

            <TextView
                android:id="@+id/tvAboutText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_epicreel"
                android:textColor="@color/epicreel_text_primary"
                android:textSize="16sp"
                app:layout_constraintStart_toEndOf="@id/ivAboutIcon"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="@dimen/spacing_medium"
                android:layout_marginTop="@dimen/spacing_medium"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>



    <!-- زر Back مثبت في أسفل الشاشة -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnBack"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:text="@string/back"
        android:textColor="@color/epicreel_text_secondary"
        android:textSize="18sp"
        android:background="@drawable/button_back_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/spacing_large"
        android:layout_marginEnd="@dimen/spacing_large"
        android:layout_marginBottom="70dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>